# ai-profiles

./: .gitignore  README  README.md  dev.ipynb  main.py  pyproject.toml  utils.py
dec/: bicluster_file.py  checkpoints.weights.h5  cluster_file.py  cluster_image.py  encoder.py  kmeans.py  plot_rcs.py  raw_cluster_file.py
methods/: method1.py  method2.py  method3.py
playground/: dbscan.py  kmeans.py
playground/kmeans/: kmeans.py
supervised/: dev.ipynb  main.py
supervised/methods/: method1.py  method2.py  method3.py
unsupervised/: plot_rcs.py
unsupervised/cnn/: cluster.py  cluster_file.py  cluster_image.py  dbscan.py  decoder.keras  encoder.keras  encoder.py  kmeans.pkl  kmeans.py  kmeans_labels.npy  kmeans_model.pkl  model.py  mymodel.keras
